# zotero-curator

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish-pypi.yml
docs/: PUBLISHING.md  ZOTERO_PLUGIN.md
examples/: plan.yaml  self-evolving-agent-plan.yaml
plugins/zotero-curator-plugin/: bootstrap.js  chrome.manifest  manifest.json
plugins/zotero-curator-plugin/content/: dialog.css  dialog.js  dialog.xhtml
scripts/: build_zotero_plugin.py  import_self_evolving.ps1
src/zotero_curator/: __init__.py  cli.py
src/zotero_curator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_core.py
