[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zotero-curator"
version = "0.1.2"
description = "Sync-safe Zotero ingestion and curation for AI-assisted research workflows"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "zotero-curator contributors" }]
keywords = ["zotero", "research", "automation", "bibliography", "agents"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Information Analysis"
]
dependencies = ["PyYAML>=6.0"]

[project.urls]
Homepage = "https://github.com/suborigin/zotero-curator"
Repository = "https://github.com/suborigin/zotero-curator"
Issues = "https://github.com/suborigin/zotero-curator/issues"

[project.scripts]
zotero-curator = "zotero_curator.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
